--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,8 @@ pydantic==2.12.5
 pydantic_core==2.41.5
 typing-inspection==0.4.2
 typing_extensions==4.15.0
+certifi==2025.11.12
+charset-normalizer==3.4.4
+idna==3.11
+requests==2.32.5
+urllib3==2.6.2
